Update Turkish Translation
I opened a PR because I preferred not to use Transifex. I’d be glad if you could at least upload it there.

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,43 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">WG Tunnel</string>
-	<string name="vpn_channel_name">VPN Bildirim Kanalı</string>
-	<string name="error_file_extension">Dosya .conf veya .zip değil</string>
-    <string name="turn_off_tunnel">İşlem için tünelin kapalı olması gerekiyor</string>
+    <string name="vpn_channel_id" translatable="false">VPN Channel</string>
+    <string name="vpn_channel_name">VPN Bildirim Kanalı</string>
+    <string name="github_url" translatable="false">https://github.com/zaneschepke/wgtunnel/issues</string>
+    <string name="docs_url" translatable="false">https://zaneschepke.com/wgtunnel-docs/overview.html</string>
+    <string name="privacy_policy_url" translatable="false">https://zaneschepke.com/wgtunnel-docs/privacypolicy.html</string>
+    <string name="docs_wildcards" translatable="false">https://zaneschepke.com/wgtunnel-docs/features.html#wildcard-wi-fi-name-support</string>
+    <string name="donate_url" translatable="false">https://zaneschepke.com/donate/</string>
+    <string name="error_file_extension">Dosya .conf veya .zip değil</string>
+    <string name="turn_off_tunnel">Bu işlem tünelin kapalı olmasını gerektirir</string>
     <string name="no_tunnels">Henüz tünel eklenmedi!</string>
     <string name="tunnels">Tüneller</string>
     <string name="tunnel_mobile_data">Mobil veride tünel</string>
-    <string name="privacy_policy">Gizlilik Politikasını Görüntüle</string>
+    <string name="privacy_policy">Gizlilik politikasını görüntüle</string>
     <string name="okay">Tamam</string>
-    <string name="tunnel_on_ethernet">Ethernet\'te tünel</string>
-    <string name="prominent_background_location_message">Bu özellik, uygulama kapalıyken bile Wi-Fi SSID izlemesini etkinleştirmek için arka plan konum iznine ihtiyaç duyar. Daha fazla ayrıntı için lütfen Destek ekranında bağlantısı verilen Gizlilik Politikasına bakın.</string>
+    <string name="tunnel_on_ethernet">Ethernet üzerinde tünel</string>
+    <string name="prominent_background_location_message">Bu özellik, uygulamanın kapalı olduğu durumlarda bile Wi-Fi SSID izlemesini etkinleştirmek için arka planda konum izni gerektirir. Daha fazla ayrıntı için lütfen Destek ekranında bağlantısı verilen Gizlilik Politikasına bakın.</string>
     <string name="prominent_background_location_title">Arka Plan Konum Açıklaması</string>
-    <string name="thank_you">WG Tunnel\'ı kullandığınız için teşekkürler!</string>
-    <string name="trusted_ssid_value_description">SSID\'yi gönder</string>
-    <string name="add_tunnels_text">Dosyadan veya zip\'ten ekle</string>
+    <string name="thank_you">WG Tunnel’i kullandığınız için teşekkürler!</string>
+    <string name="trusted_ssid_value_description">SSID Gönder</string>
+    <string name="add_tunnels_text">Dosyadan veya zip’ten ekle</string>
     <string name="open_file">Dosya Aç</string>
     <string name="add_from_qr">QR kodundan ekle</string>
-    <string name="qr_scan">QR Tarama</string>
+    <string name="qr_scan">QR Tara</string>
     <string name="tunnel_name">Tünel Adı</string>
-    <string name="exclude">Hariç tut</string>
-    <string name="include">Dahil et</string>
+    <string name="exclude">Hariç Tut</string>
+    <string name="include">Dahil Et</string>
     <string name="config_changes_saved">Yapılandırma değişiklikleri kaydedildi.</string>
     <string name="public_key">Genel anahtar</string>
     <string name="addresses">Adresler</string>
     <string name="dns_servers">DNS sunucuları</string>
     <string name="mtu">MTU</string>
-    <string name="peer">Eş (peer)</string>
-    <string name="allowed_ips">İzin verilen IP\'ler</string>
-    <string name="endpoint">Uç nokta (endpoint)</string>
+    <string name="peer">Eş</string>
+    <string name="allowed_ips">İzin verilen IP’ler</string>
+    <string name="endpoint">Uç Nokta</string>
     <string name="name">Ad</string>
-    <string name="always_on_vpn_support">Her Zaman Açık VPN\'e İzin Ver</string>
-    <string name="location_services_not_detected">Konum Hizmetleri Algılanmadı</string>
-    <string name="hint_search_packages">Paketlerde ara</string>
+    <string name="always_on_vpn_support">Her Zaman Açık VPN’e İzin Ver</string>
+    <string name="location_services_not_detected">Konum Servisleri Algılanmadı</string>
+    <string name="hint_search_packages">Paketleri ara</string>
+    <string name="db_name" translatable="false">wg-tunnel-db</string>
     <string name="auto_tunneling">Otomatik tünelleme</string>
     <string name="vpn_on">VPN açık</string>
     <string name="vpn_off">VPN kapalı</string>
     <string name="create_import">Sıfırdan oluştur</string>
-    <string name="turn_on_tunnel">İşlem için aktif tünel gerekiyor</string>
+    <string name="turn_on_tunnel">Bu işlem aktif bir tünel gerektirir</string>
     <string name="add_peer">Eş ekle</string>
     <string name="interface_">Arayüz</string>
     <string name="rotate_keys">Anahtarları döndür</string>
@@ -49,41 +56,42 @@
     <string name="random">(rastgele)</string>
     <string name="optional">(isteğe bağlı)</string>
     <string name="optional_no_recommend">(isteğe bağlı, önerilmez)</string>
-    <string name="preshared_key">Önceden paylaşılmış anahtar</string>
+    <string name="preshared_key">Ön paylaşımlı anahtar</string>
     <string name="seconds">saniye</string>
     <string name="persistent_keepalive">Kalıcı canlı tutma</string>
     <string name="cancel">İptal</string>
-    <string name="error_authentication_failed">Kimlik doğrulama başarısız oldu</string>
-    <string name="error_authorization_failed">Yetkilendirme başarısız oldu</string>
+    <string name="error_authentication_failed">Kimlik doğrulama başarısız</string>
+    <string name="error_authorization_failed">Yetkilendirme başarısız</string>
     <string name="enabled_app_shortcuts">Uygulama kısayollarını etkinleştir</string>
     <string name="export_configs">Yapılandırmaları dışa aktar</string>
     <string name="unknown_error">Bilinmeyen bir hata oluştu</string>
-    <string name="tunnel_on_wifi">Güvenilmeyen wifi\'da tünel</string>
-	<string name="email_subject">WG Tunnel Desteği</string>
+    <string name="tunnel_on_wifi">Güvenilmeyen wifi’da tünel</string>
+    <string name="my_email" translatable="false">support@zaneschepke.com</string>
+    <string name="email_subject">WG Tunnel Desteği</string>
     <string name="email_chooser">E-posta gönder…</string>
     <string name="docs_description">Belgeleri oku</string>
     <string name="email_description">Bana e-posta gönder</string>
-    <string name="use_kernel">Kernel modülünü kullan</string>
+    <string name="use_kernel">Çekirdek modülünü kullan</string>
     <string name="error_ssid_exists">SSID zaten mevcut</string>
     <string name="error_root_denied">Root kabuğu reddedildi</string>
     <string name="error_no_file_explorer">Dosya gezgini yüklü değil</string>
     <string name="error_invalid_code">Geçersiz QR kodu</string>
-    <string name="location_services_missing_message">Uygulama, cihazınızda etkinleştirilmiş herhangi bir konum hizmeti algılamıyor. Cihaza bağlı olarak, bu durum güvenilmeyen wifi özelliğinin wifi adını okumasını engelleyebilir. Yine de devam etmek istiyor musunuz?</string>
-    <string name="auto_tunnel_title">Otomatik Tünel Hizmeti</string>
+    <string name="location_services_missing_message">Uygulama, cihazınızda etkinleştirilmiş herhangi bir konum servisi algılamıyor. Cihaza bağlı olarak, bu durum güvenilmeyen wifi özelliğinin wifi adını okuyamamasını sağlayabilir. Yine de devam etmek ister misiniz?</string>
+    <string name="auto_tunnel_title">Otomatik tünel servisi</string>
     <string name="delete_tunnel">Tüneli sil</string>
     <string name="delete_tunnel_message">Bu tüneli silmek istediğinizden emin misiniz?</string>
     <string name="yes">Evet</string>
-    <string name="tunneling_apps">Tünellenen uygulamalar</string>
+    <string name="tunneling_apps">Tünelleme uygulamaları</string>
     <string name="all">tümü</string>
     <string name="no_email_detected">E-posta uygulaması algılanmadı</string>
     <string name="no_browser_detected">Tarayıcı algılanmadı</string>
-    <string name="open_issue">Sorun bildir</string>
+    <string name="open_issue">Bir sorun aç</string>
     <string name="read_logs">Günlükleri oku</string>
     <string name="auto">(otomatik)</string>
-    <string name="incorrect_pin">PIN yanlış</string>
-    <string name="pin_created">PIN başarıyla oluşturuldu</string>
-    <string name="enter_pin">PIN\'inizi girin</string>
-    <string name="create_pin">PIN oluştur</string>
+    <string name="incorrect_pin">Pin yanlış</string>
+    <string name="pin_created">Pin başarıyla oluşturuldu</string>
+    <string name="enter_pin">Pin’inizi girin</string>
+    <string name="create_pin">Pin oluştur</string>
     <string name="enable_app_lock">Uygulama kilidini etkinleştir</string>
     <string name="restart_on_ping">Ping başarısız olduğunda yeniden başlat (beta)</string>
     <string name="mobile_data_tunnel">Mobil veri tüneli olarak ayarla</string>
@@ -94,18 +102,118 @@
     <string name="settings">Ayarlar</string>
     <string name="support">Destek</string>
     <string name="kernel">Çekirdek</string>
-    <string name="junk_packet_count">Gereksiz paket sayısı</string>
-    <string name="junk_packet_minimum_size">Gereksiz paket minimum boyutu</string>
-    <string name="junk_packet_maximum_size">Gereksiz paket maksimum boyutu</string>
-    <string name="init_packet_junk_size">Başlatma paketi gereksiz boyutu</string>
-    <string name="response_packet_junk_size">Yanıt paketi gereksiz boyutu</string>
-    <string name="init_packet_magic_header">Başlatma paketi sihirli başlığı</string>
+    <string name="junk_packet_count">Çöp paket sayısı</string>
+    <string name="junk_packet_minimum_size">Çöp paket minimum boyutu</string>
+    <string name="junk_packet_maximum_size">Çöp paket maksimum boyutu</string>
+    <string name="init_packet_junk_size">Başlangıç paketi çöp boyutu</string>
+    <string name="response_packet_junk_size">Yanıt paketi çöp boyutu</string>
+    <string name="init_packet_magic_header">Başlangıç paketi sihirli başlığı</string>
     <string name="response_packet_magic_header">Yanıt paketi sihirli başlığı</string>
     <string name="transport_packet_magic_header">Taşıma paketi sihirli başlığı</string>
     <string name="underload_packet_magic_header">Düşük yük paketi sihirli başlığı</string>
-	<string name="unsure_how">nasıl devam edeceğinizden emin değilseniz</string>
-    <string name="see_the">Bakın:</string>
-	<string name="getting_started_guide">başlangıç kılavuzu</string>
+    <string name="telegram_url" translatable="false">https://t.me/wgtunnel</string>
+    <string name="unsure_how">nasıl devam edeceğinizden emin değilseniz</string>
+    <string name="see_the">Bakınız</string>
+    <string name="getting_started_url" translatable="false">https://zaneschepke.com/wgtunnel-docs/getting-started.html</string>
+    <string name="getting_started_guide">başlangıç kılavuzu</string>
     <string name="error_file_format">Geçersiz tünel yapılandırma formatı</string>
-    <string name="restart_at_boot">Önyüklemede yeniden başlat</string>
+    <string name="restart_at_boot">Başlangıçta yeniden başlat</string>
+    <string name="vpn_denied_dialog_title">İzin Reddedildi</string>
+    <string name="vpn_settings">VPN sistem ayarları</string>
+    <string name="always_on_message">VPN bağlantı izni reddedildi. Lütfen</string>
+    <string name="always_on_message2">diğer tüm uygulamalar için Her Zaman Açık VPN’in kapalı olduğundan emin olun ve tekrar deneyin</string>
+    <string name="chat_description">Topluluğa katıl</string>
+    <string name="tunnel_required">Bu özellik en az bir tünel gerektirir</string>
+    <string name="background_location_message">Bu özellik için her zaman konum izni ve/veya hassas konum gereklidir. Lütfen</string>
+    <string name="app_settings">uygulama ayarları</string>
+    <string name="background_location_message2">bu izinlerin etkin olduğundan emin olun</string>
+    <string name="root_accepted">Root kabuğu kabul edildi</string>
+    <string name="set_custom_ping_ip">Özel ping IP’si ayarla</string>
+    <string name="default_ping_ip">(isteğe bağlı, varsayılan eşler)</string>
+    <string name="set_custom_ping_internal">Ping aralığı (saniye)</string>
+    <string name="optional_default">"isteğe bağlı, varsayılan: "</string>
+    <string name="set_custom_ping_cooldown">Ping yeniden başlatma bekleme süresi (saniye)</string>
+    <string name="show_amnezia_properties">Amnezia özelliklerini göster</string>
+    <string name="never">asla</string>
+    <string name="sec">sn</string>
+    <string name="handshake">el sıkışma</string>
+    <string name="logs">Günlükler</string>
+    <string name="kill_switch">Kill Switch</string>
+    <string name="appearance">Görünüm</string>
+    <string name="notifications">Bildirimler</string>
+    <string name="automatic">Otomatik</string>
+    <string name="light">Açık</string>
+    <string name="dark">Koyu</string>
+    <string name="dynamic">Dinamik</string>
+    <string name="language">Dil</string>
+    <string name="display_theme">Ekran teması</string>
+    <string name="trusted_wifi_names">Güvenilir wifi adları</string>
+    <string name="add_wifi_name">Wifi adı ekle</string>
+    <string name="on_demand_rules">İsteğe bağlı tünel kuralları</string>
+    <string name="primary_tunnel">Birincil tünel</string>
+    <string name="mobile_tunnel">Mobil veri tüneli</string>
+    <string name="skip">Atla</string>
+    <string name="launch_app_settings">Uygulama ayarlarını başlat</string>
+    <string name="use_wildcards">İsim jokerlerini kullan</string>
+    <string name="learn_more">Daha fazla bilgi</string>
+    <string name="wildcards_active">Jokerler etkin</string>
+    <string name="wifi_name_via_shell">Kabuk üzerinden wifi adı</string>
+    <string name="use_root_shell_for_wifi">Wifi adını almak için root kabuğunu kullan</string>
+    <string name="kernel_not_supported">Çekirdek desteklenmiyor</string>
+    <string name="start_auto">Otomatik tüneli başlat</string>
+    <string name="stop_auto">Otomatik tüneli durdur</string>
+    <string name="tunnel_running">Tünel çalışıyor</string>
+    <string name="monitoring_state_changes">Durum değişikliklerini izleme</string>
+    <string name="donate">Projeye bağış yap</string>
+    <string name="local_logging">Yerel günlüğe kaydetme</string>
+    <string name="enable_local_logging">Yerel günlüğe kaydetmeyi etkinleştir</string>
+    <string name="configuration_change">Yapılandırma değişikliği</string>
+    <string name="requires_app_relaunch">Bu değişiklik uygulamanın yeniden başlatılmasını gerektirir. Devam etmek ister misiniz?</string>
+    <string name="add_from_clipboard">Panodan ekle</string>
+    <string name="stop_on_no_internet">İnternet olmadığında durdur</string>
+    <string name="stop_on_internet_loss">İnternet kaybında tüneli durdur</string>
+    <string name="ethernet_tunnel">Ethernet tüneli</string>
+    <string name="set_ethernet_tunnel">Ethernet tüneli olarak ayarla</string>
+    <string name="native_kill_switch">Yerel kill switch</string>
+    <string name="vpn_kill_switch">VPN kill switch</string>
+    <string name="kill_switch_options">Kill switch seçenekleri</string>
+    <string name="allow_lan_traffic">LAN trafiğine izin ver</string>
+    <string name="bypass_lan_for_kill_switch">Kill switch için LAN’ı atla</string>
+    <string name="vpn_channel_description">VPN durum bildirimleri için bir kanal</string>
+    <string name="auto_tunnel_channel_id" translatable="false">Auto-tunnel Channel</string>
+    <string name="auto_tunnel_channel_name">Otomatik Tünel Bildirim Kanalı</string>
+    <string name="auto_tunnel_channel_description">Otomatik tünel durum bildirimleri için bir kanal</string>
+    <string name="stop">durdur</string>
+    <string name="splt_tunneling">Bölünmüş tünelleme</string>
+    <string name="tunnel_specific_settings">Tünele özgü ayarlar</string>
+    <string name="show_scripts">Komut dosyalarını göster</string>
+    <string name="pre_up">Ön çalıştırma</string>
+    <string name="post_up">Sonra çalıştırma</string>
+    <string name="pre_down">Ön kapatma</string>
+    <string name="post_down">Sonra kapatma</string>
+    <string name="amnezia_kernel_message">Amnezia çekirdek modunda kullanılamaz</string>
+    <string name="enable_amnezia">Amnezia’yı etkinleştir</string>
+    <string name="wg_compat_mode">WG uyumluluk modu</string>
+    <string name="quick_actions">Hızlı eylemler</string>
+    <string name="advanced_settings">Gelişmiş ayarlar</string>
+    <string name="debounce_delay">Gecikme süresi</string>
+    <string name="hide_amnezia_properties">Amnezia özelliklerini gizle</string>
+    <string name="hide_scripts">Komut dosyalarını gizle</string>
+    <string name="enable_amnezia_compatibility">Amnezia uyumluluğunu etkinleştir</string>
+    <string name="remove_amnezia_compatibility">Amnezia uyumluluğunu kaldır</string>
+    <string name="exclude_lan">LAN’ı hariç tut</string>
+    <string name="include_lan">LAN’ı dahil et</string>
+    <string name="error_tunnel_start">Tünel başlatma başarısız</string>
+    <string name="tunnel_control">Tünel kontrolü</string>
+    <string name="auto_tunnel">Otomatik tünel</string>
+    <string name="kill_switch_off">Güvenilirde kill switch’i durdur</string>
+    <string name="server_ipv4">IPv4 ana makine çözünürlüğü</string>
+    <string name="prefer_ipv4">IPv4 bağlantısını tercih et</string>
+    <string name="dns_error">Uç nokta DNS’si çözülemedi.</string>
+    <string name="start_failed_config">Yapılandırma hatası nedeniyle tünel başlatılamadı.</string>
+    <string name="unauthorized">Yetkisiz, tünel başlatılamadı.</string>
+    <string name="tunne_start_failed_title">Tünel hatası</string>
+    <string name="multiple">Çoklu</string>
+    <string name="export_amnezia">Amnezia olarak dışa aktar</string>
+    <string name="export_wireguard">WireGuard olarak dışa aktar</string>
 </resources>
