feat: Add option to add config via URL (#623)
Co-authored-by: Zane Schepke <zanecschepke@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,6 +215,10 @@
 	<string name="multiple">Multiple</string>
     <string name="export_amnezia">Export as Amnezia</string>
 	<string name="export_wireguard">Export as WireGuard</string>
+    <string name="add_from_url">Add from URL</string>
+    <string name="enter_config_url">Enter config URL</string>
+    <string name="error_download_failed">Failed to download config</string>
+    <string name="error_invalid_url">Invalid URL</string>
     <string name="save">Save</string>
 	<string name="search">Search</string>
 	<string name="select">Select</string>
