--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,10 +237,13 @@
     <string name="camera_permission_required">Camera permission required</string>
 	<string name="export_failed">Export failed</string>
 	<string name="tunnel_error_template">Tunnel failed with: %1$s</string>
+	<string name="wifi_name_template">Active: %1$s</string>
 	<string name="config_error">config error</string>
 	<string name="dns_resolve_error">dns resolution error</string>
 	<string name="invalid_config_error">invalid_config_error</string>
 	<string name="kernel_name_error">kernel module name error</string>
 	<string name="auth_error">not authorized error</string>
 	<string name="service_running_error">service not running error</string>
+    <string name="inactive">Inactive</string>
+	<string name="active">Active</string>
 </resources>
