feat(lang): weblate langauge updates (#701)
Co-authored-by: Hosted Weblate <hosted@weblate.org>
Co-authored-by: Matthaiks <kitynska@gmail.com>
Co-authored-by: Languages add-on <noreply-addon-languages@weblate.org>
Co-authored-by: solokot <solokot@gmail.com>
Co-authored-by: Kachelkaiser <kachelkaiser@htpst.de>
Co-authored-by: ssantos <ssantos@web.de>
Co-authored-by: 大王叫我来巡山 <hamburger2048@users.noreply.hosted.weblate.org>
Co-authored-by: mak7im01 <mak7im02@gmail.com>
Co-authored-by: nware-lab <nware.labs@gmail.com>
Co-authored-by: 翻譯得真好下次別翻了 <x86_64-pc-linux-gnu@proton.me>
Co-authored-by: Faisal Gull <mail.faisalrehman.345@gmail.com>

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -32,6 +32,7 @@
     <string name="name">Name</string>
     <string name="always_on_vpn_support">Always-On VPN erlauben</string>
     <string name="location_services_not_detected">Standortdienste nicht erkannt</string>
+    <string name="hint_search_packages">Pakete suchen</string>
     <string name="vpn_on">VPN an</string>
     <string name="vpn_off">VPN aus</string>
     <string name="create_import">Von Grund auf neu erstellen</string>
@@ -226,4 +227,5 @@
     <string name="camera_permission_required">Kameraberechtigung erforderlich</string>
     <string name="wifi_name_template">Aktiv: %1$s</string>
     <string name="delete">Löschen</string>
+    <string name="nothing_here_yet">Noch nix hier!</string>
 </resources>
