--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -73,7 +73,7 @@
     <string name="automatic">自動</string>
     <string name="add_wifi_name">新增WiFi SSID</string>
     <string name="allow_lan_traffic">允許 LAN 流量</string>
-    <string name="stop_on_no_internet">沒有連上網路時停用</string>
+    <string name="stop_on_no_internet">沒有連上網路時停止</string>
     <string name="stop_on_internet_loss">網路連線斷開時停止隧道</string>
     <string name="add_from_clipboard">從剪貼簿新增</string>
     <string name="stop">停止</string>
@@ -84,10 +84,10 @@
     <string name="error_file_format">無效的隧道組態檔案格式</string>
     <string name="endpoint">端點</string>
     <string name="location_services_not_detected">未啟用定位服務</string>
-    <string name="junk_packet_maximum_size">最大無效封包</string>
+    <string name="junk_packet_maximum_size">無效封包最大大小</string>
     <string name="no_tunnels">還沒有新增任何隧道！</string>
     <string name="allowed_ips">允許的 IP</string>
-    <string name="junk_packet_minimum_size">最小無效封包</string>
+    <string name="junk_packet_minimum_size">無效封包最小大小</string>
     <string name="error_no_file_explorer">未安裝任何檔案管理器</string>
     <string name="unsure_how">如果您不確定如何進行</string>
     <string name="see_the">請參閱</string>
@@ -100,4 +100,29 @@
     <string name="vpn_off">VPN 已關閉</string>
     <string name="error_root_denied">無法取得 root 權限</string>
     <string name="root_accepted">已取得 root 權限</string>
+    <string name="enable_remote_app_control">啟用遠端應用程式控制</string>
+    <string name="join_telegram">加入 Telegram 社群</string>
+    <string name="add_from_url">從 URL 新增</string>
+    <string name="join_matrix">加入 Matrix 社群</string>
+    <string name="copy">複製</string>
+    <string name="base64_key">base64 格式</string>
+    <string name="persistent_keepalive">保持連線</string>
+    <string name="email_subject">WG Tunnel 支援</string>
+    <string name="all">全部</string>
+    <string name="server_ipv4">IPv4 主機名稱解析</string>
+    <string name="search">搜尋</string>
+    <string name="save">儲存</string>
+    <string name="prefer_ipv4">偏好 IPv4 連線</string>
+    <string name="select">選擇</string>
+    <string name="info">資訊</string>
+    <string name="delete">刪除</string>
+    <string name="export_failed">匯出失敗</string>
+    <string name="add_tunnel">新增隧道</string>
+    <string name="camera_permission_required">需要相機權限</string>
+    <string name="status">狀態</string>
+    <string name="dns_resolve_error">dns 解析錯誤</string>
+    <string name="kernel_name_error">核心模組名稱錯誤</string>
+    <string name="nothing_here_yet">這裡目前還沒有任何東西！</string>
+    <string name="remove_amnezia_compatibility">移除 Amnezia 相容性</string>
+    <string name="enable_amnezia_compatibility">啟用 Amnezia 相容性</string>
 </resources>
