--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -194,7 +194,7 @@
     <string name="add_from_url">Dodaj z adresu URL</string>
     <string name="export_failed">Eksport nie powiódł się</string>
     <string name="inactive">Nieaktywny</string>
-    <string name="wifi_name_template">Aktywna: %1$s</string>
+    <string name="wifi_name_template">Aktywny: %1$s</string>
     <string name="delete_logs">Usuń i wyczyść dzienniki</string>
     <string name="join_telegram">Dołącz do społeczności Telegramu</string>
     <string name="error_download_failed">Nie udało się pobrać konfiguracji</string>
@@ -211,7 +211,7 @@
     <string name="export_tunnels_wireguard">Eksportuj tunele jako WireGuard</string>
     <string name="delete">Usuń</string>
     <string name="camera_permission_required">Wymagane pozwolenie na dostęp do aparatu</string>
-    <string name="tunnel_error_template">Tunel nie powiódł się z powodu: %1$s</string>
+    <string name="tunnel_error_template">Tunel nie powiódł się z powodu: %1$s</string>
     <string name="remote_key_template">Klucz: %1$s</string>
     <string name="config_error">błąd konfiguracji</string>
     <string name="dropdown">Rozwijane</string>
@@ -227,4 +227,5 @@
     <string name="export_tunnels_amnezia">Eksportuj tunele jako Amnezia</string>
     <string name="invalid_config_error">błąd nieprawidłowej konfiguracji</string>
     <string name="dns_resolve_error">błąd rozwiązywania DNS</string>
+    <string name="nothing_here_yet">Jeszcze nic tu nie ma!</string>
 </resources>
