--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,4 +237,5 @@
 	<string name="tunnel_starting">Tunnel starting</string>
 	<string name="enable_remote_app_control">Enable remote app control</string>
     <string name="nothing_here_yet">Nothing here yet!</string>
+    <string name="share">Share</string>
 </resources>
