feat: variable number tunnel export with file explorer support
feat: listen for user present AndroidTV
#606
closes #704

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,4 +239,6 @@
     <string name="nothing_here_yet">Nothing here yet!</string>
     <string name="share">Share</string>
     <string name="select_all">Select all</string>
+    <string name="export_success">Export success</string>
+    <string name="download">Download</string>
 </resources>
