--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -252,4 +252,5 @@
     <string name="permission_required">Permission Required</string>
     <string name="install_updated_permission">This app needs permission to install updates.</string>
     <string name="allow">Allow</string>
+    <string name="licenses">Licenses</string>
 </resources>
