--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,7 +220,8 @@
 	<string name="tunnel_error_template">Tunnel failed with: %1$s</string>
 	<string name="wifi_name_template">Active: %1$s</string>
 	<string name="remote_key_template">Key: %1$s</string>
-    <string name="version_template">Current version: %1$s</string>
+    <string name="version_template">Version: %1$s</string>
+    <string name="flavor_template">Flavor: %1$s</string>
 	<string name="config_error">config error</string>
 	<string name="dns_resolve_error">dns resolution error</string>
 	<string name="invalid_config_error">invalid_config_error</string>
@@ -253,4 +254,5 @@
     <string name="install_updated_permission">This app needs permission to install updates.</string>
     <string name="allow">Allow</string>
     <string name="licenses">Licenses</string>
+    <string name="update_check_unsupported">Update check not supported this build type.</string>
 </resources>
