feat: add darker theme options
closes #706

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -255,4 +255,6 @@
     <string name="allow">Allow</string>
     <string name="licenses">Licenses</string>
     <string name="update_check_unsupported">Update check not supported this build type.</string>
+    <string name="darker">Darker</string>
+    <string name="amoled">AMOLED</string>
 </resources>
